src/components/News/MainImg/MainImg.css
.article-post .article-main-img {
    margin-bottom:15px;
    width: 100%;
    object-fit: contain;
    overflow: hidden;
}

.article-post .article-main-img img {
    height: 400px;
    transition: all 0.4s ease ;
}

.article-main-img img:hover {
    transform: scale(1.2);
    position: relative;
    transition: all 0.4s ease ;
}

.blockImages {
    width: 100%;
    background: #8c8c8c;
}

